# AoC2024

./: LICENSE  README.md  pyproject.toml
aoc/: pyproject.toml
aoc/aoc/: __init__.py  day1.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
tests/: test_day_1.py  test_day_11.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py
